--- a/Contact.html
+++ b/Contact.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Contact</title>
 </head>
 <body>
     <header>
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="Profile.html">Profile</a></li> 
-            <li><a href="Contact.html">Contact</a></li>   
+            <li><a href="Profile.html">Profile</a></li>   
             <li><a href="Courses.html">Courses</a></li>
-            <li><a href="Feedback.html">Feedback</a></li>
             <li><a href="Grades.html">Grades</a></li>
+            <li><a href="Contact.html">Contact</a></li> 
+            <li><a href="Feedback.html">Feedback</a></li>
+            
         </ul>
     </header>
     <hr>
@@ -21,11 +23,12 @@
         <h1>Contact Us</h1>
     </section>
     <hr>
-        <h2>Nmae = DIVYA SUNARKAR <br>
-        Call me = 123456789 <br>
-       Address =  Bhopalpattanam Post-Rudhraram (dist.-Bijapur) C.G.- 494446</h2><br>
+    <div class="Contact">
+        <h2>Nmae = DIVYA SUNARKAR</h2>
+        <h2>Call me = 123456789</h2> 
+       <h2>Address =  Bhopalpattanam Post-Rudhraram (dist.-Bijapur) C.G.- 494446</h2><br>
 
    <p> Gmail=<a href="mailto: @divyasunarkar25@navgurukul.org"> click to mail here </a></p>
-    
+    </div>
 </body>
 </html>
