--- a/Courses.html
+++ b/Courses.html
@@ -3,17 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Courses</title>
 </head>
 <body>
     <header>
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="Profile.html">Profile</a></li> 
-            <li><a href="Contact.html">Contact</a></li>   
+            <li><a href="Profile.html">Profile</a></li>   
             <li><a href="Courses.html">Courses</a></li>
-            <li><a href="Feedback.html">Feedback</a></li>
             <li><a href="Grades.html">Grades</a></li>
+            <li><a href="Contact.html">Contact</a></li> 
+            <li><a href="Feedback.html">Feedback</a></li>
+            
         </ul>
     </header>
     <hr>
@@ -21,29 +23,32 @@
        <h1>My Courses</h1> 
     </section>
     <hr> 
-    <div>
-        <h2>1.Web Developing Courses:-</h2> <br>
+    <div class="course">
+        <h2>1.Web Developing Courses:-</h2>
         <h3> * HTML. <br>
              * CSS. <br>
              * JAVASCRIPT basic  <br>
              * Responsive Web Design.</h3>
+            </div>
   <hr>
-        <h2>2.Programming & Logic Courses in goals:-</h2> <br>
+       <div class="course">
+        <h2>2.Programming & Logic Courses in goals:-</h2> 
         <h3> * C/C++ <br>
              * Python Basics. <br>
              * Data Structure & Algorithms. <br> </h3> 
+            </div>
   <hr>
-        <h2>3. Advanced skills:- </h2> <br>
+        <div class="course"><h2>3. Advanced skills:- </h2> 
         <h3> * Git & GitHub.<br>
              * Netlify. <br>
              * Vercel. </h3>
+            </div>
   <hr>
-        <h2>4. Soft Skills:-</h2><br>
+       <div class="course"><h2>4. Soft Skills:-</h2>
         <h3> * Communication Skills. <br>
              * Portfolio Building. <br>
              * Spoken English. <br>
              * Life Skills. </h3>
-
-    </div>
+      </div>
 </body>
 </html>
