--- a/Grades.html
+++ b/Grades.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Grades</title>
 </head>
 <body>
     <header>
-        <nav>
             <ul>
-                <li><a href="Home.html">Home</a></li>
-                <li><a href="Profile.html">Profile</a></li>
-                <li><a href="Contact.html">Contact</a></li>
-                <li><a href="Courses.html">Courses</a></li>
-                <li><a href="Feedback.html">Feedback</a></li>
-                <li><a href="Grades.html">Grades</a></li>
+            <li><a href="Home.html">Home</a></li>
+            <li><a href="Profile.html">Profile</a></li>   
+            <li><a href="Courses.html">Courses</a></li>
+            <li><a href="Grades.html">Grades</a></li>
+            <li><a href="Contact.html">Contact</a></li> 
+            <li><a href="Feedback.html">Feedback</a></li>
+            
             </ul>
-        </nav>
     </header>
 
     <main>
