--- a/Home.html
+++ b/Home.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="style.css" rel="stylesheet">
     <title>Home Page</title>
 </head>
 <body>
     <header>
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="Profile.html">Profile</a></li> 
-            <li><a href="Contact.html">Contact</a></li>   
-            <li><a href="Courses.html">Courses</a></li>
-            <li><a href="Feedback.html">Feedback</a></li>
-            <li><a href="Grades.html">Grades</a></li>
+            <li><a href="./Profile.html">Profile</a></li>   
+            <li><a href="./Courses.html">Courses</a></li>
+            <li><a href="./Grades.html">Grades</a></li>
+            <li><a href="./Contact.html">Contact</a></li> 
+            <li><a href="./Feedback.html">Feedback</a></li>
         </ul>
     </header>
     <hr>
     <h1> "Welcome to My Portal."<br></h1>
     <h2> -:"Explore this website":-</h2>
-<p> I am student of navgurukul from sop. </p>
+    <h2> Choose the best path to you </h2>
+    <h2> if you click on the link above, you can explore in detail</h2>
+    <img src="image/image.png" alt="image">
+    
    
+    
 </body>
 </html>
