--- a/Profile.html
+++ b/Profile.html
@@ -3,23 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profile</title>
+    <title>Profile</title> <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <ul>
             <li><a href="Home.html">Home</a></li>
-            <li><a href="Profile.html">Profile</a></li> 
-            <li><a href="/Contact.html">Contact</a></li>   
-            <li><a href="/Courses.html">Courses</a></li>
-            <li><a href="/Feedback.html">Feedback</a></li>
-            <li><a href="/Grades.html">Grades</a></li>
+            <li><a href="Profile.html">Profile</a></li>   
+            <li><a href="Courses.html">Courses</a></li>
+            <li><a href="Grades.html">Grades</a></li>
+             <li><a href="Contact.html">Contact</a></li> 
+            <li><a href="Feedback.html">Feedback</a></li>
+            
         </ul>
     </header>
     <hr>
     
             <h1>My Profile</h1><br>
-            <img src="IMG_20250902_143733682.jpg" alt="" width="300" height="400"><br>
+            <img src="image/IMG_20250902_143733682.jpg" alt="image"><br>
             <h2> Hye,  I'm DIVYA</h2><br>
             <hr>
             <h2> PROFESSION = Web Devloper<br>
