Edit the profile file

--- a/Profile.html
+++ b/Profile.html
@@ -20,7 +20,7 @@
     <hr>
     
             <h1>My Profile</h1><br>
-            <img src="image/IMG_20250902_143733682.jpg" alt="image"><br>
+            <img src="/IMG_20250902_143733682.jpg" alt="image"><br>
             <h2> Hye,  I'm DIVYA</h2><br>
             <hr>
             <h2> PROFESSION = Web Devloper<br>
