all file were updated

--- a/Courses.html
+++ b/Courses.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1> STUDENT PORTAL</h1>
         <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="Profile.html">Profile</a></li>   
@@ -20,35 +21,42 @@
     </header>
     <hr>
     <section>
-       <h1>My Courses</h1> 
+       <h2>My Courses</h2> 
     </section>
-    <hr> 
     <div class="course">
-        <h2>1.Web Developing Courses:-</h2>
-        <h3> * HTML. <br>
+        <h3>1.Web Developing Courses:-</h3>
+        <h4> * HTML. <br>
              * CSS. <br>
              * JAVASCRIPT basic  <br>
-             * Responsive Web Design.</h3>
+             * Responsive Web Design.</h4>
             </div>
   <hr>
        <div class="course">
-        <h2>2.Programming & Logic Courses in goals:-</h2> 
-        <h3> * C/C++ <br>
+        <h3>2.Programming & Logic Courses in goals:-</h3> 
+        <h4> * C/C++ <br>
              * Python Basics. <br>
-             * Data Structure & Algorithms. <br> </h3> 
+             * Data Structure & Algorithms. <br> </h4> 
             </div>
   <hr>
-        <div class="course"><h2>3. Advanced skills:- </h2> 
-        <h3> * Git & GitHub.<br>
+        <div class="course"><h3>3. Advanced skills:- </h3> 
+        <h4> * Git & GitHub.<br>
              * Netlify. <br>
-             * Vercel. </h3>
+             * Vercel. </h4>
             </div>
   <hr>
-       <div class="course"><h2>4. Soft Skills:-</h2>
-        <h3> * Communication Skills. <br>
+       <div class="course"><h3>4. Soft Skills:-</h3>
+        <h4> * Communication Skills. <br>
              * Portfolio Building. <br>
              * Spoken English. <br>
-             * Life Skills. </h3>
+             * Life Skills. </h4>
       </div>
+
+      <footer>
+  <div class="copyright">
+    <h3>&copy; 2025 Divya | All rights reserved</h3>
+        <a href="https://github.com/divyasunarkar25-tech?tab=repositories" target=" _blank"> github link..</a>
+  </div>
+</footer>
+
 </body>
 </html>
