--- a/Grades.html
+++ b/Grades.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-            <ul>
+        <h1> STUDENT PORTAL </h1>
+        <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="Profile.html">Profile</a></li>   
             <li><a href="Courses.html">Courses</a></li>
@@ -18,9 +19,8 @@
             
             </ul>
     </header>
-
+    <h2>Grades</h2>
     <main>
-        <h1>Grades</h1>
         <p> This is students grades tables  </p>
 
         <table aria-label="Student grades">
@@ -62,6 +62,12 @@
         </table>
     </main>
 
+<footer>
+  <div class="copyright">
+    <h3>&copy; 2025 Divya | All rights reserved</h3>
+        <a href="https://github.com/divyasunarkar25-tech?tab=repositories" target=" _blank"> github link..</a>
+  </div>
+</footer>
     
 </body>
 </html>
