--- a/Home.html
+++ b/Home.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1> STUDENT PORTAL </h1>
         <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="./Profile.html">Profile</a></li>   
@@ -18,13 +19,18 @@
         </ul>
     </header>
     <hr>
-    <h1> "Welcome to My Portal."<br></h1>
-    <h2> -:"Explore this website":-</h2>
-    <h2> Choose the best path to you </h2>
-    <h2> if you click on the link above, you can explore in detail</h2>
-    <img src="image/image.png" alt="image">
+    <h2> "Welcome to My Portal."<br></h2>
+    <h3> -:"Explore this website":-</h3>
+    <h3> Choose the best path to you </h3>
+    <h3> if you click on the link above, you can explore in detail</h3>
+    <img src="image/user-icon-vector-laptop-computer-female-person-profile-user-icon-vector-laptop-computer-female-person-profile-avatar-106635266.webp" alt="image">
     
-   
+   <footer>
+  <div class="copyright">
+     <h3>&copy; 2025 Divya | All rights reserved<h3>
+<a href="https://github.com/divyasunarkar25-tech?tab=repositories" target=" _blank"> github link..</a>
+  </div>
+</footer>
     
 </body>
 </html>
