--- a/Contact.html
+++ b/Contact.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <h1> STUDENT PORTAL</h1>
         <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="Profile.html">Profile</a></li>   
@@ -20,15 +21,24 @@
     </header>
     <hr>
     <section>
-        <h1>Contact Us</h1>
+        <h2>Contact Us</h2>
     </section>
     <hr>
     <div class="Contact">
-        <h2>Nmae = DIVYA SUNARKAR</h2>
-        <h2>Call me = 123456789</h2> 
-       <h2>Address =  Bhopalpattanam Post-Rudhraram (dist.-Bijapur) C.G.- 494446</h2><br>
+        <h3>Nmae = DIVYA SUNARKAR</h3>
+        <h3>Call me = 123456789</h3> 
+       <h3>Address =  Bhopalpattanam Post-Rudhraram (dist.-Bijapur) C.G.- 494446</h3><br>
 
-   <p> Gmail=<a href="mailto: @divyasunarkar25@navgurukul.org"> click to mail here </a></p>
-    </div>
+    <button><a href="mailto:divyasunarkar25@navgurukul.org" class="send-btn">
+    click here to mail me....
+  </a></button></div>
+
+  <footer>
+  <div class="copyright">
+    <h3>&copy; 2025 Divya | All rights reserved</h3>
+    <a href="https://github.com/divyasunarkar25-tech?tab=repositories" target=" _blank"> github link..</a>
+  </div>
+</footer>
+
 </body>
 </html>
