--- a/Feedback.html
+++ b/Feedback.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header>
-        <ul>
+      <h1> STUDENT PORTAL</h1>
+      <ul>
             <li><a href="Home.html">Home</a></li>
             <li><a href="Profile.html">Profile</a></li>   
             <li><a href="Courses.html">Courses</a></li>
@@ -21,7 +22,7 @@
     </header>
     <hr>
     <section>
-  <h1>Feedback Form</h1>
+  <h2>Feedback Form</h2>
     </section>
     <form class="feedback">
         <label>Name:<input type="name" placeholder="Enter your name"></label><br>
@@ -32,5 +33,13 @@
         
         <button type="submit">submit</button>
     </form>
+
+    <footer>
+  <div class="copyright">
+    <h3>&copy; 2025 Divya | All rights reserved</h3>
+        <a href="https://github.com/divyasunarkar25-tech?tab=repositories" target=" _blank"> github link..</a>
+  </div>
+</footer>
+
 </body>
 </html>
